Adding midwayDescription now that there is an additional tutorial round. Altering phaseQuestion to contain relevant gameSessionDisplay information so it can be sourced from the backend